# Adapti

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: manage.py
src/apps/api/: apps.py  urls.py
src/apps/api/serializers/: appointments_serializers.py  assistants_serializers.py  conversations_serializers.py  doctor_serializers.py  patient_serializers.py
src/apps/api/tests/: test_appointments.py
src/apps/api/views/: __init__.py  appointments_views.py  assistants_views.py  conversations_views.py  customers_views.py  users.py  whatsapp_views.py
src/apps/appointments/: apps.py  models.py
src/apps/appointments/fixtures/: appointmentStatus.json  appointmentType.json
src/apps/appointments/migrations/: 0001_initial.py  0002_appointmenttype.py  0003_appointment_patient.py
src/apps/appointments/services/: appointment_service.py
src/apps/bot/: admin.py  models.py  urls.py  utils.py  views.py
src/apps/bot/channels/: base_channel.py  channel_manager.py  whatsapp_channel.py
src/apps/bot/migrations/: 0001_initial.py  0002_alter_zohotoken_access_token_and_more.py  0003_oauthtoken_delete_zohotoken.py  0004_delete_oauthtoken.py
src/apps/bot/services/: __init__.py  bot_service.py  openai_service.py
src/apps/companies/: apps.py  models.py
src/apps/companies/migrations/: 0001_initial.py  0002_company_zoho_workspace_id.py
src/apps/conversations/: apps.py  models.py
src/apps/conversations/migrations/: 0001_initial.py  0002_alter_thread_customer_alter_thread_thread_id.py
src/apps/customers/: apps.py  models.py
src/apps/customers/migrations/: 0001_initial.py  0002_alter_customer_phone.py
src/apps/discord/services/: discord_service.py
src/apps/doctors/: apps.py  models.py
src/apps/doctors/fixtures/: doctorStatus.json  doctors.json
src/apps/doctors/migrations/: 0001_initial.py  0002_remove_doctor_slug.py
src/apps/google/: apps.py  urls.py
src/apps/oauthtoken/: admin.py  apps.py  models.py  urls.py
src/apps/oauthtoken/migrations/: 0001_initial.py
src/apps/openai/: admin.py  config.py  models.py
src/apps/openai/migrations/: 0001_initial.py  0002_alter_assistant_assistant_id.py  0003_assistant_customer.py  0004_alter_assistant_customer.py  0005_alter_assistant_tool_resources_alter_assistant_tools.py
src/apps/openai/services/: assistants_service.py  message_service.py  run_service.py  thread_service.py
src/apps/patients/: apps.py  models.py
src/apps/patients/migrations/: 0001_initial.py  0002_patient_email.py
src/apps/services/: apps.py  urls.py  views.py
src/apps/services/communication_channels_services/: discord_service.py
src/apps/services/discord/: discord_service.py
src/apps/services/google_services/: oauth_calendar_service.py
src/apps/services/openai_services/: __init__.py
src/apps/users/: admin.py  managers.py  test.py
src/apps/utils/: __init__.py  directory_path.py  error_404.py  error_500.py  generate_order_ids.py  generate_password.py  parse_expiry_date.py  random_pin_generator.py  sanitize_folders.py  testing_time_tool.py  tokens.py  validate_mail.py
src/apps/zoho/: config.py
src/conf/: asgi.py  urls.py  wsgi.py
src/conf/settings/: __init__.py  base.py  development.py
(+27 files in other folders)
